# megaplan

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  doubledip.py  megaplan.py  plan.md  pyproject.toml  test_doubledip.py  test_megaplan.py
.claude/skills/: doubledip.md  megaplan.md
megaplan/: __init__.py  __main__.py  _core.py  checks.py  cli.py  evaluation.py  execution.py  flags.py  handlers.py  hermes_worker.py  merge.py  parallel_critique.py  parallel_review.py  prompts.py  review_checks.py  review_mechanical.py  schemas.py  step_edit.py  types.py  workers.py
megaplan/_core/: __init__.py  io.py  phase_runtime.py  state.py  workflow.py
megaplan/data/: AGENTS.md  claude_subagent_appendix.md  codex_subagent_appendix.md  instructions.md
megaplan/data/global/: cursor_rule.mdc  skill.md
megaplan/loop/: engine.py  git.py  handlers.py  prompts.py  types.py
megaplan/prompts/: __init__.py  critique.py  execute.py  gate.py  planning.py  review.py
tests/: test_checks.py  test_config.py  test_core.py  test_evaluation.py  test_handle_review_robustness.py  test_io_git_patch.py  test_loop.py  test_megaplan.py  test_parallel_critique.py  test_parallel_review.py  test_prompts.py  test_review_checks.py  test_review_mechanical.py  test_schemas.py  test_swe_bench.py  test_test_both.py  test_tiny_robustness.py  test_workers.py
